syntax = "proto3";
package ponpe.server.admin_service;
option go_package = "pb";

import "user.proto";

// Endpoint
service Admin {
    rpc GetAllUser(GetAllUserReq) returns (GetAllUserResp);
    rpc CreateGuestUser(CreateGuestUserReq) returns (CreateGuestUserResp);
}

// Req / Resp
message GetAllUserReq {}

message GetAllUserResp {
    repeated ponpe.server.user.User users = 1;
}

message CreateGuestUserReq {
    string email = 1;
    string password = 2;
}

message CreateGuestUserResp {}
